--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="title_activity_allocate__subject_">Allocate_Subject_Activity</string>
     <string name="title_activity_allocate_sub">AllocateSubActivity</string>
     <string name="title_activity_spinner_json">SpinnerJson</string>
+    <string name="title_activity_list_view">ListView</string>
 
 </resources>
